Add SRC and DST IP when peeking/popping message
